fixed spacing for mobile on about page

--- a/style/style.css
+++ b/style/style.css
@@ -101,6 +101,7 @@ p {
   font-size: 18px;
   line-height: 27px;
   padding: 12px;
+  margin: 5px;
   transition: all 100ms ease-in-out;
 }
 
